--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "vkma",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://mike56k.github.io/Emotions-Map/",
   "main": "index.js",
   "scripts": {
     "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "vk-miniapps-deploy"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
